<resources>
    <string name="app_name">CheapskatesApp</string>
    <string name="icon">icon </string>
    <string name="askbudget"> What is your budget?</string>
    <string name="dollarsign">$</string>
    <string name="budgethint">Enter Budget</string>
    <string name="fiveten">$5</string>
    <string name="tenfifteen">$15</string>
    <string name="fifteenplus">$25</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_restaurant__no__match">Restaurant_No_Match</string>
    <string name="to">to: </string>
    <string name="upperBudget">Your Budget</string>
    <string name="lowerBudget">$0</string>
    <string name="budgetView">Budget: </string>
    <string name="itemsinbudgetheader">Items Within Your Budget: </string>
    <string name="resturantwebsite">Website</string>
    <string name="resturannumber">Phone Number</string>
    <string name="resturantaddress">Address</string>
    <string name="resturantname">Restaurants</string>
    <string name="resturantrating">Rating</string>
    <string name="desc">back</string>
    <string name="minilogo">decorative mini logo</string>
    <string name="mapSpaceFiller">blank map</string>
    <string name="phonetag">Phone: </string>
    <string name="websitetag">Website: </string>
    <string name="ratingtag">Rating: </string>
    <string name="addresstag">Address: </string>
    <string name="noitemstag">No items within your budget</string>
    <string name="changebudgettag">Please increase your budget for menu items.</string>
    <string name="yesbuttonfix">Change my budget</string>
    <string name="finding_food_in_your_area">Finding Food Under</string>
    <string name="imagedesc2">icon for loading</string>
    <string name="msg">Please enable all permissions</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="title_activity_maps">Map</string>
    <string name="go">Go!</string>
    <string name="cuisine">Cuisines</string>
    <string name="dialoguedesc">Pop_up Window</string>
    <string name="popuptext">Your budget is too large.</string>
    <string name="popuptext2">This app is only for Cheapskates.</string>
    <string name="show_in_maps">Show in maps</string>
    <string name="american">American</string>
    <string name="icecream">IceCream</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="korean">Korean</string>
    <string name="mexican">Mexican</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="french">French</string>
    <string name="fast_food">Fast Food</string>
    <string name="dessert">Dessert</string>
    <string name="pizza">Pizza</string>
    <string name="chinese">Chinese</string>
    <string name="seafood">Seafood</string>
    <string name="breakfast">Breakfast</string>
    <string name="beverages">Beverages</string>
    <string name="burger">Burger</string>
    <string name="bakery">Bakery</string>
    <string name="southern">Southern</string>
    <string name="japanese">Japanese</string>
    <string name="thai">Thai</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="budget">Budget:</string>
    <string name="restaurants">Restaurants</string>
</resources>