<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/dialoguedesc"
        app:srcCompat = "@drawable/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/popuptext"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/popuptext2"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/close"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="OK"
        android:textAlignment="center"
        android:background="@color/white"/>
    
    <FrameLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">
    </FrameLayout>

</LinearLayout>