<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inc.cheapskates.cheapskatesapp.food_categories">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="500dp"
        android:layout_height="52dp"
        android:background="@color/darkblue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/minilogo"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/budgettag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:text="@string/budgetView"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <EditText
        android:id="@+id/yourbudgettag2"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/upperBudget"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/seafoam"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toEndOf="@+id/budgettag2"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <Button
        android:id="@+id/gobutton1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/orange"
        android:onClick="gobutton"
        android:text="@string/go"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toEndOf="@+id/yourbudgettag2"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/food_cate"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cuisine"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <ListView
        android:id="@+id/foodList"
        android:layout_width="382dp"
        android:layout_height="459dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
